Recursion Profile Update

--- a/companies/recursion.html
+++ b/companies/recursion.html
@@ -92,45 +92,54 @@
                          <section class="section-container">
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
-                                   Recursion is using robots to do experiments and collect data. 
-                                   They are using technology to map biology. They have a lab
+                                   Recursion is using robots to do experiments and collect data. They perform CRISPR gene 
+                                   knockout experiments and record all the phenotypic changes to the cells. They have a lab
                                    where they can conduct millions of experiments every week. All that data is
                                    collected into their Biohive supercomputer. This can be mined by using Artificial
                                    Intelligence and Machine Learning. They can collect all the genotype 
-                                   and phenotype data by using CRISPR to knock out each gene one at a time and 
-                                   recording all the changes. This could lead us to discovering new connections
-                                   between genetics and biology. 
+                                   and phenotype data and use it to map biology. This could lead us to discovering new 
+                                   connections between genetics and biology. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I haven’t been following Recursion all that long, but I think Chris Gibson is doing a good job 
-                                   so far. He is out there presenting a lot and talking about their technology. They are moving into 
-                                   phase 2 with their programs, but they haven’t run any trials of their own before this. It will take 
-                                   some time to see how well they manage the clinical development process.
+                                   I haven't been following Recursion all that long, but I think Chris Gibson is doing a good job 
+                                   so far. He is out there presenting the science and talking about their technology. They are moving into 
+                                   phase 2 with some of their programs, but they haven't run any trials of their own before this. Most of 
+                                   their programs were already phase 1 when they in-licensed them.  It will take 
+                                   some time to see how well they manage the clinical development process. They do seem to be doing a good 
+                                   job of managing the balance sheet. They even have a ton of partners with upward of $13 billion in potential 
+                                   milestones.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   REC-4881 - This is a specialized MEK1/2 inhibitor which targets tumor growth in the GI 
-                                   tract. The early phase 1 data was for safety, but there is literature that warrants testing
-                                   of MEK1/2 in colorectal cancers. We will have to see the data to see how well it works.
+                                   REC-4881 - This is a specialized MEK1/2 inhibitor which targets polyp growth in the GI 
+                                   tract related to FAP. This has some early safety data from phase 1. They are enrolling in a phase 2 trial for FAP and have 
+                                   fast track for that indication. They are expanding the indications by adding AXIN1 and APC. They plan to 
+                                   start those trials in 2024. There is a lot of rationale for using MEK1/2 inhibitors in these genetically 
+                                   driven mutations in colorectal cancers.
                               </p>
                               <p class="profiles">
-                                   REC-2282 - This is a HDAC inhibitor focused on targeting NF2. The early phase 1 data showed 
-                                   safety, but now it has to show efficacy in this disease.
+                                   REC-2282 - This is a HDAC inhibitor focused on targeting NF2 meningiomas. The early phase 1 data showed some
+                                   safety which lacked the typical cardiac toxicity that is often related to these HDAC inhibitors. The increased safety 
+                                   along with the CNS penetration of this molecule made it ideal for targeting Meningiomas from NF2. They plan to 
+                                   present more safety data with an interim safety data readout in 2024. This is one of the 
+                                   programs they in-licensed. We will need to see the efficacy data that supports this indication.
                               </p>
                               <p class="profiles">
-                                   REC-994 - This is a selective Superoxide Dismutase inhibitor. This plays a role in oxidative
-                                   stress in cells. Their early phase 1 data established safety. Now we need to see the efficacy 
-                                   data.
+                                   REC-994 - This is a selective Superoxide Scavenger molecule being developed for CCM. CCM is a disease where 
+                                   vascular malformations grow in the blood vessels. Superoxide plays a role in oxidative
+                                   stress in cells and has some evidence to relieve the burden related to CCM. Normalized ROS balance in these cells 
+                                   shows evidence of stabilizing endothelial integrity. Their early phase 1 data established safety. Now we need to see the efficacy 
+                                   data for CCM. The data is expected in 2H of 2024.
                               </p>
                               <p class="profiles">
-                                   REC-3964 - This is designed to inhibit the toxin that is released by the C diff bacteria that infects 
+                                   REC-3964 - This is designed to reverse the effects of the toxin that is released by the C diff bacteria that damages 
                                    the GI tract during infection. This is just entering phase 1 so there is no data yet.
                               </p>
                          </section>  
@@ -138,50 +147,65 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $591 million
+                                   Cash $549 million
                               </p>
                               <p class="profiles">
                                    FAP: FAP affects about 50,000 patients in the US. If I give them 10% of the market share, it would be
                                    worth $750 million sales. I would put a 1x multiplier on this program. That makes this program 
-                                   worth $750 million value.
+                                   worth $750 million value. Expansion into AXIN1 and APC would add another 60,000 patients which would double 
+                                   the market potential of this drug to well over $1.5 billion should the data work out.
                               </p>
                               <p class="profiles">
-                                   CCM: CCM affects about 1 in 200 births. That is about 20,000 patients each year if my numbers
-                                   are right. Even if they get 20% of those patients, it would be worth about $750 million sales. 
+                                   REC-2282 is for NF2 which is estimated to be about 30,000 patients in the US and EU. I don't think it 
+                                   would do more than $750 million by my best guess. It does have phase 1 data for a 1x multiplier. That would 
+                                   make it worth another $750 million value
+                              </p>
+                              <p class="profiles">
+                                   REC-994 for CCM which affects about 1 in 200 births. That is about 130,000 patients each year in the US and Europe, but 
+                                   only about 30% of patients have symptoms. Even if they get 20% of those patients, it would be worth about $750 million sales. 
                                    They are just starting phase 2 for this program for a 1x multiplier. That makes it worth
                                    about $750 million value.
                               </p>
                               <p class="profiles">
-                                   NF2: From my research, this seems to be a small indication. I don't think it would do more
-                                   than $750 million by my best guess. It does have phase 1 data for a 1x multiplier. That would 
-                                   make it worth another $750 million value
+                                   REC-3964 is for C.difficile which affects about 730,000 patients. Recurrance occurs in about 20% of 
+                                   patients. I don't have any valuation for this program yet as it will depend on the data.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.841 billion market cap. Based on the 164 million shares outstanding
-                                   on the 10Q, that comes to $17.32.
+                                   All in, that is a $2.799 billion market cap. Based on the 191.22 million shares outstanding, that comes to $14.63.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Roche in Neuroscience and GI oncology for up to 40 programs. Each program can earn up to $300 million in milestones along
+                                   with mid to high single digit royalties.
+                              </p>
+                              <p class="profiles">
+                                   Bayer in Fibrosis for multiple targets. They are able to get milestones upward of $120 million per indication. They
+                                   get royalties in the low to mid single digits.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   REC-4881 Phase 2 enrolling
+                                   REC-4881 Phase 2 Protocol Amendments to Speed up Trial in Process
                               </p>
                               <p class="profiles">
-                                   REC-2282 Phase 2 enrolling
+                                   REC-2282 Phase 2 Interim Safety Analysis in 2024
                               </p>
                               <p class="profiles">
-                                   REC-994 Phase 2 enrolling
+                                   REC-994 Phase 2 Data Expected 2H of 2024
                               </p>
                               <p class="profiles">
-                                   REC-3964 Phase 1 enrolling
+                                   REC-3964 Phase 1 Safety Data in 2H of 2023
+                              </p>
+                              <p class="profiles">
+                                   CDK-12 IND Enabling Studies to Start in 2023
+                              </p>
+                              <p class="profiles">
+                                   Target Alpha Expect to Reach IND Enabling Studies in 2023
                               </p>
                          </section> 
 
