Beam Profile Update

--- a/companies/beam.html
+++ b/companies/beam.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/13/2023</p>
+                    <p class="updated">Last Updated 2/28/2023</p>
 
                     <h1 class="company-name"><a href="https://beamtx.com/">Beam Therapeutics</a></h1>
 
@@ -94,14 +94,12 @@
                               <p class="profiles">
                                    Beam is the company behind base editing. This takes the CRISPR CAS9 enzyme system and uses
                                    it to alter a single base in the DNA. It uses a form of the CAS9 enzyme called a Nickase. This 
-                                   version of CAS9 is 
-                                   developed with only 1 of the nucleases active so that it can only cut a single strand of the DNA. 
+                                   version of CAS9 is developed with only 1 of the nucleases active so that it can only cut a single strand of the DNA. 
                                    It uses a deaminase enzyme attached to the CAS9 nickase. This enzyme plucks an amino group from the DNA base. 
                                    This facilitates the transition of that  base from an Adenine to Guanine or a Cytosine to a Thymine.
                                    Then it cuts the unedited strand which allows the DNA repair machinery to use the changed base to fix the 
-                                   mismatch of bases after deamination. Beam 
-                                   is the only company that owns this technology. They do license it to other companies for use. Beam is also 
-                                   working on next generation base editors.
+                                   mismatch of bases after deamination. Beam is the only company that owns this technology. They do license it 
+                                   to other companies for use. Beam is also working on next generation base editors.
                               </p>
                          </section>  
 
@@ -110,8 +108,10 @@
                               <p class="profiles">
                                    I have followed Beam and John Evans for nearly 3 years now. I got into this company right after the IPO 
                                    and have followed it for years. I think he has done an outstanding job so far developing the 
-                                   partnerships for the technology. He has managed the finances well with plenty of cash on the balance 
-                                   sheet. They are just starting clinical development. It will take some time to know how well they 
+                                   partnerships. They have 4 partnerships now that give them very large royalties for any products created with 
+                                   base editing. He is doing an outstanding job for developing the technology. They have multiple indications 
+                                   working toward the clinic for in-vivo editing. He has managed the finances well with plenty of cash on the balance 
+                                   sheet. They are just starting clinical development for their ex-vivo SCD program. It will take some time to know how well they 
                                    navigate the clinical process and regulatory environment. 
                               </p>
                          </section> 
@@ -136,7 +136,7 @@
                               <p class="profiles">
                                    BEAM-301 is a gene editing product targeting the G6PC gene that has a single base mutation. Their therapy 
                                    targets flipping that single base back to the wild type. Mouse models show modest return to normal fasting
-                                   glucose. This affects only the R83C mutation of the GSDIa disease. They plan to submit an IND in early 2024.
+                                   glucose. This affects the R83C and Q347X mutation of the GSDIa disease. They plan to submit an IND in early 2024.
                               </p>
                               <p class="profiles">
                                    BEAM-302 is a gene editing product targeting the E342K mutation of AATD. This is a single base mutation. They have a 
@@ -149,7 +149,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $1 billion
+                                   Cash $1.1 billion
                               </p>
                               <p class="profiles">
                                    BEAM-101 is for SCD. There are 90,000 patients in the US and over 300,000 patients world wide with SCD. 
@@ -164,28 +164,43 @@
                                    price. I would give this a .1 multiplier until we see some data for $50 million value.
                               </p>
                               <p class="profiles">
-                                   The BEAM-301 program is for GSD1a with the most common mutation of R83C. This is about 3,000 to 6,000 patients 
-                                   based on the numbers I could find. That is a smaller indication, but I think pricing would be equal to SCD or higher.
+                                   The BEAM-301 program is for GSD1a with the most common mutations of R83C and Q347X. This is about 900 and 500 patients 
+                                   respectively based on the numbers from Beam. That is a smaller indication, but I think pricing would be equal to SCD or higher.
                                    I think this could be worth more than $1 billion. I would give it a .1 
                                    multiplier since it is still preclinic. That would make it worth $100 million in value.
                               </p>
                               <p class="profiles">
-                                   The BEAM-302 program is for AATD with the most common genotype of PiZZ. The population for 
-                                   AATD is about 100,000 patients in the US. It is estimated that 90% of them are PiZZ genotype.
-                                   This could be a huge indication like SCD where they could do upward of $5 billion sales 
-                                   if they can manufacture enough doses per year.
+                                   The BEAM-302 program is for AATD with the most common genotype of PiZZ to correct the E342K mutation. The population for 
+                                   the PiZZ genotype is about 60,000 patients in the US. This could be a huge indication like SCD where they could 
+                                   do upward of $5 billion sales if they can manufacture enough doses per year.
                                    I would give it a .1 multiplier since it's still preclinic. That would make it worth $500 million value.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.15 billion market cap. Based on the 70 million shares outstanding, that comes to 
-                                   $30.71.
+                                   All in, that is a $2.25 billion market cap. Based on the 72.4 million shares outstanding, that comes to 
+                                   $31.07.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Broad Institute, MIT and Harvard licenses the technology for base editing to Beam. They will pay a low
+                                   single digit royalty for all products made with base editing.
+                              </p>
+                              <p class="profiles">
+                                   Pfizer for indication is the liver, muscle and CNS. Pfizer retains full world wide development for all of these 
+                                   programs except one. Beam has the opt in rights to one program. This program is split 35% for Beam and 65% for Pfizer.
+                              </p>
+                              <p class="profiles">
+                                   Apellis has partnership for up to use of base editing in complement related diseases. Apellis is able to license 
+                                   up to 6 programs. Beam has the right to opt into one program and participate 50/50 with them.
+                              </p>
+                              <p class="profiles">
+                                   Verve has a license for 3 liver targeted cardiovascular related diseases. They get the option to participate in any one 
+                                   of these programs at 35% world wide sales and 50% of the US on the other 2 programs.
+                              </p>
+                              <p class="profiles">
+                                   Sana has a license to use CAS12 in editing stem cells for their cell therapies. 
                               </p>
                          </section>
 
