Invitae Profile Update

--- a/companies/invitae.html
+++ b/companies/invitae.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/31/2023</p>
+                    <p class="updated">Last Updated 2/28/2023</p>
 
                     <h1 class="company-name"><a href="https://www.invitae.com/en">Invitae</a></h1>
 
@@ -106,7 +106,9 @@
                               <p class="profiles">
                                    They just replaced their CEO last year with Ken Knight. So far I like his strategy to cut costs and 
                                    focus on growing the company in key markets. They have a lot of debt so he has a huge challenge ahead 
-                                   of him. I will take time to know if he can turn this company around.
+                                   of him. They just did a refinancing of their debt to 2028. They cut costs significantly from $850 billion 
+                                   a year in cash burn down to a projected $275 million for 2023. He has really turned around this company while 
+                                   maintaining a good growth rate. They continue to grow revenues while cutting costs. 
                               </p>
                               
                          </section> 
@@ -123,8 +125,8 @@
                                    Residual Detection (MRD) of cancer.
                               </p>
                               <p class="profiles">
-                                   It’s estimated that the Women's health space is about a $2.5 billion market. It's not the reason I 
-                                   would own this company or any other testing company. The key focus in on oncology.
+                                   It's estimated that the Women's health space is about a $2.5 billion market. It's not the reason I 
+                                   would own this company or any other testing company. The key focus is on oncology.
                               </p>
                               <p class="profiles">
                                    The rare Disease market is one of the primary needs for genetic testing, but it's not even 
@@ -135,25 +137,25 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $550 million
+                                   Cash $557 million
                               </p>
                               <p class="profiles">
-                                   They have reached a run rate of $516 million a year in sales with strong ongoing growth. At 5x sales 
+                                   They project a 2023 run rate of $500 million a year in sales with strong ongoing growth. At 5x sales 
                                    for a typical price to sales for biotech companies, that comes to $2.5 billion in valuation based on current
                                    sales.
                               </p>
                               <p class="profiles">
-                                   They have about $1.7 billion in debt. That is a negative to the valuation and has to be deducted.
+                                   They have about $1.5 billion in debt. That is a negative to the valuation and has to be deducted.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $1.35 billion market cap. Based on the 243 million shares outstanding, that comes to $5.55. 
+                                   All in, that is a $1.557 billion market cap. Based on the 246.3 million shares outstanding, that comes to $6.32. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon 
+                                   None
                               </p>
                          </section> 
                          
