--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/invitae.html">NVTA</a>
+                                   after doing the 10K. 
+                              </p>
+                              <p> 
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/beam.html">BEAM</a>
                                    after doing the 10K. 
                               </p>
